fixed slider overflow issues

--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -1,6 +1,8 @@
 .swiper-container {
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    box-sizing: border-box; /* Ensure padding and border are included */
   }
 
   .swiper-slide {
@@ -22,3 +24,8 @@
     -webkit-align-items: center;
     align-items: center;
   }
+
+  .swiper-slide img {
+    max-width: 100%;
+    height: auto;
+}
